--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+  background-color: rgb(41, 148, 198);
   color: white;
+  
 }
 
 code {
