--- a/src/App.css
+++ b/src/App.css
@@ -1,72 +1,75 @@
-/* .App {
-  text-align: center;
- 
-}
+/* App.css */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  background: linear-gradient(135deg, #1e3a8a, #6d28d9, #9333ea);
+  font-family: 'Poppins', sans-serif;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  color: #f5f5f5;
+  text-shadow: 0 0 5px #39ff14, 0 0 10px #39ff14, 0 0 20px #39ff14;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-container {
+  background-color: rgba(0, 0, 0, 0.7); /* Slight transparency */
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+  padding: 20px;
+  width: 360px;
+  margin: 0 auto;
 }
 
-
-.App {
-  text-align: center;
-  padding: 50px;
+img {
+  border: 3px solid #9333ea;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
 }
 
-.converter-container {
-  margin-top: 20px;
+.range {
+  margin: 10px 0;
 }
 
-.input-container {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-input {
-  padding: 5px;
-  margin-right: 10px;
+input[type="range"] {
+  width: 100%;
+  accent-color: #39ff14; /* Neon Green */
 }
 
 button {
-  padding: 8px;
-  background-color: #00ff00; 
+  background: none;
   border: none;
+  color: #39ff14;
+  font-size: 1.5rem;
   cursor: pointer;
 }
 
-.result-container {
-  margin-top: 20px;
+button:hover {
+  text-shadow: 0px 0px 10px #39ff14;
 }
- */
+
+.music-info {
+  color: #fff;
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.7);
+}
+
+.time-span {
+  color: #f5f5f5;
+}
+
+.audio-controls svg {
+  color: #f5f5f5;
+  cursor: pointer;
+}
+
+.audio-controls svg:hover {
+  color: #39ff14;
+  text-shadow: 0px 0px 10px #39ff14;
+}
