--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,14 @@
 
 body {
   margin: 0;
+  background: linear-gradient(135deg, #1e3b8ab4, #6d28d9, #9233eaa2);
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(41, 148, 198);
+  /* background-color: rgb(41, 148, 198); */
   color: white;
   
 }
